csrc/tests/codegen_probes/errors/err_return_outside_func.bas
' REJECT: RETURN <value> at global scope.
' zxbparser p_return_expr:2116 "Syntax Error: Returning value out of FUNCTION".
Return 5
